plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.chuuzr'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

test {
	testLogging {
		events "passed", "skipped", "failed"//, "standardOut", "standardError"

		showExceptions true
		exceptionFormat "full"
		showCauses true
		showStackTraces true

		//Change from false to true
		showStandardStreams = false
	}
}

dependencies {
	// Spring
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	// DB, Hibernate and Flyway
	implementation 'org.postgresql:postgresql:42.7.2'
	implementation "io.hypersistence:hypersistence-utils-hibernate-63:3.14.1"
	implementation "org.flywaydb:flyway-core:11.20.2"
	implementation "org.flywaydb:flyway-database-postgresql:11.20.2"

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// SMS
	implementation 'com.twilio.sdk:twilio:11.0.2'

	// Phone Number Validation
	implementation 'com.googlecode.libphonenumber:libphonenumber:8.13.37'
}

tasks.named('test') {
	useJUnitPlatform()
}